fix(api): update CORS origin patterns and doctor role queries for Cloud Run